--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,14 +7,17 @@
       "type": "node",
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "cds",
-      "args": [
-        "serve",
-        "--with-mocks",
-        "--in-memory?"
-      ],
-      "skipFiles": [
-        "<node_internals>/**"
-      ]
+      "args": ["serve", "--with-mocks", "--in-memory?"],
+      "skipFiles": ["<node_internals>/**"]
+    },
+    {
+      "name": "cds ts hybrid",
+      "request": "launch",
+      "type": "node",
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "cds-ts",
+      "args": ["w", "--profile", "hybrid"],
+      "skipFiles": ["<node_internals>/**"]
     }
   ]
 }
